# openenv-scaling

./: .gitignore  README.md  envoy-config-generated.yaml  envoy-config-template.yaml  envoy-config.yaml  openenv-connection.env  pyproject.toml  test_concurrency.py
.claude/skills/openenv-benchmark/: SKILL.md
benchmark/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
benchmark/server/: Dockerfile  __init__.py  app.py  benchmark_environment.py
deploy/: alloc.sh  run.sh  serve.sh
deploy/hf_spaces/: README.md  deploy.sh
deploy/local/: run_docker.sh  run_uvicorn.sh
deploy/slurm/: alloc.sh  run_multinode_experiment.sh  serve_multi.sh  serve_multi_batch.sh  serve_single.sh
experiments/config/: experiment_matrix.yaml
experiments/reports/: EXPERIMENT_LOG.md  TAKEAWAYS.md  tables.md
experiments/runbooks/: hf_spaces.md  local.md  slurm.md
experiments/scripts/: analyze_results.py  plot_scaling_comparison.py  plot_scaling_curves.py  pull_from_hub.py  push_to_hub.py  run_experiment.py
matthieu/: alloc.sh  run.sh
tests/: __init__.py  test_scaling.py
