[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-slurm"
version = "0.1.0"
description = "Scaling and concurrency tests for OpenEnv benchmark environments"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    # Testing dependencies
    "httpx>=0.24.0",
    "websockets>=11.0",
    # Configuration
    "pyyaml>=6.0",
    "huggingface-hub==1.3.0",
    "openenv-core @ git+https://github.com/meta-pytorch/OpenEnv.git@main",
]

[project.optional-dependencies]
# Analysis and visualization
analysis = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]

# Full development setup
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
]

# All optional dependencies
all = [
    "openenv-slurm[analysis,dev]",
]

[project.scripts]
# Run experiments
run-experiment = "experiments.scripts.run_experiment:main"
analyze-results = "experiments.scripts.analyze_results:main"

[tool.setuptools]
packages = ["tests", "experiments", "experiments.scripts"]
package-dir = { "" = "." }

[tool.setuptools.package-data]
experiments = ["config/*.yaml", "runbooks/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


